# Walter_AMR

./: DEMOS.md  README.md  final_instructions  ingresar a esp
Arduino/main/: main.ino
amr_ws/src/: .rosinstall  .rosinstall.bak
amr_ws/src/ArloBot_description/: CMakeLists.txt  package.xml
amr_ws/src/arlo_auto_docking/: CMakeLists.txt  package.xml
amr_ws/src/arlo_control_msgs/: CMakeLists.txt  package.xml
amr_ws/src/arlo_controller/: CMakeLists.txt  package.xml
amr_ws/src/arlobot_sim_gazebo/: CMakeLists.txt  package.xml
amr_ws/src/arlobot_sim_navigation/: CMakeLists.txt  package.xml  setup.py
amr_ws/src/arlobot_sim_slam/: CMakeLists.txt  package.xml
amr_ws/src/arlobot_uv_launcher/: CMakeLists.txt  package.xml
amr_ws/src/arlobotcar_bringup/: CMakeLists.txt  package.xml
amr_ws/src/social_nav_tests/: CMakeLists.txt  package.xml
amr_ws/src/social_nav_tests/config/: smf_move_base_control.yaml  smf_move_base_mapping.yaml  smf_move_base_planning.yaml
amr_ws/src/social_nav_tests/launch/: leg_detector.launch  leg_tracker.launch  planner_launcher.launch  robot_starter.launch
amr_ws/src/social_nav_tests/param/dwa_planner/: costmap_common_params_arlobot.yaml  dwa_local_planner_params_arlobot.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params_test.yaml
amr_ws/src/social_nav_tests/scripts/: leg_pedsim_publisher.py  leg_tracker_pedsim_publisher.py  odom_publisher.py  round_move.py
arlobotcar_bringup/: CMakeLists.txt
arlobotcar_bringup/launch/: bringup_stable.launch  camera_test.launch
arlobotcar_bringup/scripts/: odom_raw.py  sampled_odom.py
arlobotcar_nav/: CMakeLists.txt  package.xml
arlobotcar_nav/config/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  planner.yaml
arlobotcar_nav/launch/: arlobot_map_cartographer_original.launch  arlobotcar_map_cartographer.launch  arlobotcar_navigation.launch  laser_esp_bringup.launch  navigation_test.launch
arlobotcar_nav/maps/: CIDISMAP.pgm  CIDISMAP.yaml
arlobotcar_nav/param/: costmap_common_params_arlobot.yaml  dwa_local_planner_params_arlobot.yaml
camera_test/launch/: two_cam_test.launch
python_files/: move_base.py
uPy/: arlorobot.py  boot.py  charger_station.py  control_luces.py  main_control_pid.py  main_control_vel.py  main_nav.py  main_teleop.py  prueba_mqtt.py  shiftr_test.py
uPy/arlo_control_msgs/: WheelsPower.msg  _WheelsEncoders.py  _WheelsPower.py  __init__.py
uPy/arlo_control_msgs_base/: WheelsEncoders.msg
uPy/std_msgs/: _Bool.py  _Float32.py  _Int16.py  __init__.py
(+479 files in other folders)
